# file-tools

./: Dockerfile  README.md  add-date.py  compose.yaml  convert-to-mp3.py  convert-to.py  convert_to_jpg.py  count-extensions.py  docker-compose.yml  exiftool-notes.md  find-ext.py  find_duplicates.py  find_similar.py  fix_dates.py  gen_dhash.py  hash_rename.py  mov-date.py  process-heic.py  process-mov.py  pyproject.toml  remove-live-photos.py  remove_live_photos.py  rename_from_xmp.py  requirements.in  requirements.txt
.github/workflows/: build-container-image.yaml  build-latest-container-image.yaml  build-release-container-image.yaml  pip-compile-upgrade.yaml
