[project]
name = "file-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dhash>=1.4",
    "piexif>=1.1.3",
    "pillow>=11.3.0",
    "pybktree>=1.1",
]

[tool.ruff.lint]
select = ["ANN", "E", "F", "FURB", "I", "PERF", "RUF", "S", "UP"]
